# semaforo-projeto

./: .gitignore  CMakeLists.txt  LICENSE  README.md  semaforo-projeto.c
inc/: ssd1306.h  ssd1306_font.h  ssd1306_i2c.c  ssd1306_i2c.h
